--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <header class="header-container">
-        <i class="fas fa-bars" onclick="toggleIcon()"></i>
+        <i id="icon" class="fas fa-bars" onclick="toggleIcon()"></i>
         <h2>sneakers</h2>
-        <ul class="links-container">
+        <ul id="links-container" class="links-container">
             <li><a href="#">Collections</a></li>
             <li><a href="#">Men</a></li>
             <li><a href="#">Women</a></li>
@@ -82,6 +82,10 @@
         <div class="cart-box">
             <p id="cart-info">Your cart is empty.</p>
         </div>
+    </div>
+
+    <div id="side-menu" class="side-menu">
+        <i class="fas fa-times" onclick="closeSideMenu()"></i>
     </div>
 </body>
 <script src="index.js"></script>
