--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <div id="side-menu" class="side-menu">
-        <i class="fas fa-times" onclick="closeSideMenu()"></i>
+        <i id="close-icon" class="fas fa-times" onclick="closeSideMenu()"></i>
     </div>
 </body>
 <script src="index.js"></script>
