--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <img src="icons/icon-plus.svg" id="plus" alt="">
                     </button>
                 </div>
-                <div class="cart-button">
+                <div class="cart-button" onclick="addToCart()">
                     <button>
                         <img src="icons/icon-cart-white.svg" alt="">
                         <span>Add to cart</span>
