--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <title>E-commerce product page</title>
     <link rel="stylesheet" href="styles.css">
 
@@ -96,6 +97,11 @@
 
     <div id="side-menu" class="side-menu">
         <i id="close-icon" class="fas fa-times" onclick="closeSideMenu()"></i>
+    </div>
+
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">SYED ABUTHAHIR</a>.
     </div>
 </body>
 <script src="index.js"></script>
