--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
     </header>
     <section class="main-content wraper">
         <div class="image-section">
-            <div class="main-image">
+            <div class="main-image" id="main-image-section">
                 <img src="images/image-product-1.jpg" alt="">
             </div>
             <div class="sub-image img-list">
-                <img src="images/image-product-1-thumbnail.jpg" alt="img">
-                <img src="images/image-product-2-thumbnail.jpg" alt="img">
-                <img src="images/image-product-3-thumbnail.jpg" alt="img">
-                <img src="images/image-product-4-thumbnail.jpg" alt="img">
+                <img src="images/image-product-1-thumbnail.jpg" alt="img" id="1">
+                <img src="images/image-product-2-thumbnail.jpg" alt="img" id="2">
+                <img src="images/image-product-3-thumbnail.jpg" alt="img" id="3">
+                <img src="images/image-product-4-thumbnail.jpg" alt="img" id="4">
             </div>
         </div>
         <div class="content">
