--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
         </div>
     </header>
     <section class="main-content wraper">
-        <div class="image-section">
+        <div id="image-section" class="image-section">
             <div class="main-image" id="main-image-section">
                 <img src="images/image-product-1.jpg" alt="">
             </div>
             <div class="sub-image img-list">
-                <img src="images/image-product-1-thumbnail.jpg" alt="img" id="1">
-                <img src="images/image-product-2-thumbnail.jpg" alt="img" id="2">
-                <img src="images/image-product-3-thumbnail.jpg" alt="img" id="3">
-                <img src="images/image-product-4-thumbnail.jpg" alt="img" id="4">
+                <img src="images/image-product-1-thumbnail.jpg" alt="img" id="1" onclick="renderAsMainImage (1)">
+                <img src="images/image-product-2-thumbnail.jpg" alt="img" id="2" onclick="renderAsMainImage (2)">
+                <img src="images/image-product-3-thumbnail.jpg" alt="img" id="3" onclick="renderAsMainImage (3)">
+                <img src="images/image-product-4-thumbnail.jpg" alt="img" id="4" onclick="renderAsMainImage (4)">
             </div>
         </div>
         <div class="content">
